# mlops-tlc-demo

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.beads/: config.yaml  issues.jsonl  spec_to_ticket_graph.v1.json
.beads/.br_history/: issues.20260419_002322_076080000.jsonl  issues.20260419_002322_164065000.jsonl  issues.20260419_002322_252124000.jsonl  issues.20260419_002322_341944000.jsonl  issues.20260419_002322_434187000.jsonl  issues.20260419_002322_529146000.jsonl  issues.20260419_002322_632291000.jsonl  issues.20260419_002322_731154000.jsonl  issues.20260419_002322_832248000.jsonl  issues.20260419_002322_930214000.jsonl  issues.20260419_002323_030308000.jsonl  issues.20260419_003143_423462000.jsonl  issues.20260419_003143_529669000.jsonl  issues.20260419_003143_647069000.jsonl  issues.20260419_003143_753581000.jsonl  issues.20260419_003143_863926000.jsonl  issues.20260419_003143_996142000.jsonl  issues.20260419_003144_106242000.jsonl  issues.20260419_003144_220271000.jsonl  issues.20260419_003144_339468000.jsonl  issues.20260419_003602_585899000.jsonl  issues.20260419_003602_696003000.jsonl  issues.20260419_003602_799495000.jsonl  issues.20260419_003602_908057000.jsonl  issues.20260419_003603_018065000.jsonl  issues.20260419_003603_128081000.jsonl  issues.20260419_003603_247101000.jsonl  issues.20260419_003603_366138000.jsonl  (+12 more)
dev_plans/: issue-2-bootstrap-contracts.md  issue-3-ingest-raw-tlc.md  issue-4-cleaning-quality.md  issue-5-feature-pipeline.md
tests/: test_clean_tlc.py  test_contracts.py  test_metadata_store.py  test_tlc_ingest.py
(+13 files in other folders)
